<!--
Copyright (C) 2017-2018 Soner Tari

This file is part of PFFW.

PFFW is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

PFFW is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with PFFW.  If not, see <http://www.gnu.org/licenses/>.
-->

<resources>
    <string name="app_name" translatable="false">PFFW</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="refresh">Refresh</string>
    <string name="logout">Logout</string>
    <string name="info">Info</string>
    <string name="packet_filter">Packet Filter</string>
    <string name="dhcp_server">DHCP Server</string>
    <string name="dns_server">DNS Server</string>
    <string name="system">System</string>
    <string name="hosts">Hosts</string>
    <string name="interfaces">Interfaces</string>
    <string name="rules">Rules</string>
    <string name="states">States</string>
    <string name="queues">Queues</string>
    <string name="statistics">Statistics</string>
    <string name="general">General</string>
    <string name="daily">Daily</string>
    <string name="hourly">Hourly</string>
    <string name="single_month">Single Month</string>
    <string name="single_day">Single Day</string>
    <string name="live">Live</string>
    <string name="graphs">Graphs</string>
    <string name="transfer">Transfer</string>
    <string name="mbufs">Mbufs</string>
    <string name="logs">Logs</string>
    <string name="archives">Archives</string>
    <string name="graph">Graph</string>
    <string name="select_log_file">SELECT LOG FILE</string>
    <string name="label">Label</string>
    <string name="comixwall_logo">ComixWall logo</string>
    <string name="pf_firewall">PF Firewall</string>
    <string name="version">v6.4.1</string>
    <string name="a" translatable="false">A</string>
    <string name="i" translatable="false">I</string>
    <string name="l" translatable="false">L</string>
    <string name="p" translatable="false">P</string>
    <string name="q" translatable="false">Q</string>
    <string name="r" translatable="false">R</string>
    <string name="s" translatable="false">S</string>
    <string name="b" translatable="false">B</string>
    <string name="total">Total</string>
    <string name="external_interface">EXTERNAL INTERFACE</string>
    <string name="mbuf_statistics">MBUF STATISTICS</string>
    <string name="state_statistics">STATE STATISTICS</string>
    <string name="data_transfer">DATA TRANSFER</string>
    <string name="dhcp_status">DHCP STATUS</string>
    <string name="interfaces_allcaps">INTERFACES</string>
    <string name="pf_status_allcaps">PF STATUS</string>
    <string name="queues_allcaps">QUEUES</string>
    <string name="rules_allcaps">RULES</string>
    <string name="symon_status_allcaps">SYMON STATUS</string>
    <string name="selection">SELECTION</string>
    <string name="user">user</string>
    <string name="live_statistics">LIVE STATISTICS</string>
    <string name="state_searches_vs_packets">STATE SEARCHES vs PACKETS</string>
    <string name="system_datetime">System datetime</string>
    <string name="password">password</string>
    <string name="status">Status</string>
    <string name="source_addresses">Source addresses</string>
    <string name="internal_interface">INTERNAL INTERFACE</string>
    <string name="regexp">Regexp:</string>
    <string name="selected_log_file">Selected log file</string>
    <string name="pf_status">Pf Status</string>
    <string name="dhcpd_status">Dhcpd Status</string>
    <string name="symon_status">Symon Status</string>
    <string name="host">host</string>
    <string name="line">Line:</string>
    <string name="destination_addresses">Destination addresses</string>
    <string name="selected_month_day">Selected month day</string>
    <string name="lines_per_page">Lines per page:</string>
    <string name="pf_info_allcaps">PF INFO</string>
    <string name="port">port</string>
    <string name="pass">Pass</string>
    <string name="loopback_interface">LOOPBACK INTERFACE</string>
    <string name="destination_ports">Destination ports</string>
    <string name="touch_contents_to_resize">Touch contents to resize</string>
    <string name="dns_status">DNS STATUS</string>
    <string name="symux_status_allcaps">SYMUX STATUS</string>
    <string name="hour">hour</string>
    <string name="general_statistics_allcaps">GENERAL STATISTICS</string>
    <string name="log_in">LOG IN</string>
    <string name="packets">packets</string>
    <string name="live_logs">LIVE LOGS</string>
    <string name="touch_tables_to_resize">Touch tables to resize</string>
    <string name="all_months">All Months</string>
    <string name="bytes">bytes</string>
    <string name="pf_info">Pf Info</string>
    <string name="named_status">Named Status</string>
    <string name="symux_status">Symux Status</string>
    <string name="all_days">All Days</string>
    <string name="block">Block</string>
    <string name="pf_memory_allcaps">PF MEMORY</string>
    <string name="general_statistics">General statistics</string>
    <string name="defaults">Defaults</string>
    <string name="active_ip_addresses">ACTIVE IP ADDRESSES</string>
    <string name="pf_memory">Pf Memory</string>
    <string name="system_allcaps">SYSTEM</string>
    <string name="pf_timeouts_allcaps">PF TIMEOUTS</string>
    <string name="daily_statistics">DAILY STATISTICS</string>
    <string name="requests_by_date">Requests by date</string>
    <string name="lt_lt_first"><![CDATA[<< First]]></string>
    <string name="leases">LEASES</string>
    <string name="lt_previous"><![CDATA[< Previous]]></string>
    <string name="pf_timeouts">Pf Timeouts</string>
    <string name="next_gt"><![CDATA[Next >]]></string>
    <string name="last_gt_gt"><![CDATA[Last >>]]></string>
    <string name="states_allcaps">STATES</string>
    <string name="logs_allcaps">LOGS</string>
    <string name="packet_types">Packet types</string>
    <string name="hourly_statistics">HOURLY STATISTICS</string>
    <string name="on_if">on %1$s</string>
    <string name="proc_is_running">%1$s is running</string>
    <string name="proc_is_not_running">%1$s is not running</string>
    <string name="states_rules">states: %1$s, rules: %2$s</string>
    <string name="cleared">cleared: %1$s</string>
    <string name="packets_bytes">pkts: %1$s, bytes: %2$s</string>
    <string name="dropped_packets_bytes">dropped pkts: %1$s, bytes: %2$s</string>
    <string name="evals_states_statecreats">evals: %1$s, states: %2$s, state creats: %3$s</string>
    <string name="proto_dir_pkts_bytes_age">%1$s, %2$s, pkts: %3$s, bytes: %4$s, age: %5$s</string>
    <string name="cpu_mem_time">cpu: %1$s, mem: %2$s, time: %3$s</string>
    <string name="date">Date: %1$s %2$s, %3$s:%4$s</string>
    <string name="length">length: %1$s</string>
    <string name="log_file">Log file: %1$s</string>
    <string name="type_dir_if">%1$s %2$s on %3$s</string>
    <string name="rule_log">rule: %1$s, log: %2$s</string>
    <string name="total_smallcaps">total: %1$s</string>
    <string name="in4">In4</string>
    <string name="out4">Out4</string>
    <string name="in6">In6</string>
    <string name="out6">Out6</string>
    <string name="month_day_colon">Month: %1$s Day: %2$s</string>
    <string name="hour_colon">Hour: %1$s</string>
    <string name="all_requests">All Requests</string>
    <string name="allowed_requests">Allowed Requests</string>
    <string name="blocked_requests">Blocked Requests</string>
    <string name="matched_requests">Matched Requests</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="notification_details">NOTIFICATION DETAILS</string>
    <string name="notifications_menu">Notifications</string>
    <string name="account_perms">Account permission is used to get user name only</string>
    <string name="notification_channel_id" translatable="false">PFFW_NOTIFIER_CHANNEL</string>
    <string name="delete_all">Delete All</string>
    <string name="notification_not_recent">Notification is not more recent than the last one</string>
    <string name="dashboard_menu">Dashboard</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="critical">CRITICAL</string>
    <string name="error">ERROR</string>
    <string name="warning">WARNING</string>
    <string name="System">System</string>
    <string name="PacketFilter">Packet Filter</string>
    <string name="DHCPServer">DHCP Server</string>
    <string name="DNSServer">DNS Server</string>
    <string name="OpenSSH">OpenSSH</string>
    <string name="FTPProxy">FTP Proxy</string>
    <string name="WebServer">Web Server</string>
    <string name="Symon">Symon</string>
    <string name="Symux">Symux</string>
    <string name="SSLProxy">SSL Proxy</string>
    <string name="WebFilter">Web Filter</string>
    <string name="IDS">IDS</string>
    <string name="InlineIPS">Inline IPS</string>
    <string name="PassiveIPS">Passive IPS</string>
    <string name="SPAMFilter">SPAM Filter</string>
    <string name="VirusFilter">Virus Filter</string>
    <string name="VirusDBUpdate">Virus DB Update</string>
    <string name="POP3Proxy">POP3 Proxy</string>
    <string name="SMTPProxy">SMTP Proxy</string>
    <string name="IMProxy">IM Proxy</string>
    <string name="OpenVPN">OpenVPN</string>
    <string name="SOCKSProxy">SOCKS Proxy</string>
    <string name="SPAMDeferral">SPAM Deferral</string>
    <string name="Pmacct">Pmacct</string>
</resources>
